# fmradio

./: .gitignore  README.md  check_env.py  pyproject.toml  radio_app_styles.css
fmradio/: __init__.py  __main__.py
fmradio/core/: __init__.py  radio_controller.py  stations.py
fmradio/ui/: __init__.py  app.py  radio_app_styles.css  styles.py
